PLUGIN-10. Jira Batch Source. Integration tests.

--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,12 @@
       <version>${cdap.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>4.0.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
